--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,22 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-
-    <body> -->
-
-    <!--Add a nav bar here -->
-
-    <!-- Add reviews as cards -->
-
-    <!-- </body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,40 +9,95 @@
 
     <body>
 
-            <nav>
-            <ul class="nav navbar-nav navbar-left">  
-                <li>
-                    <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About Us</a>
-                    <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+    <!--Add a nav bar here -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Capston Project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                <a class="nav-link" href="{% url 'djangoapp:index' %}">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                        <li>
-                            Dealership Review
-                            <p style="text-align:right;"> <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                            <a class="btn btn-link" href="{% url 'djangoapp:logout'%}">Logout</a></p>
-                        </li>
-                        {% else %}
-                        <li>
-                            <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                            {% csrf_token %}
-                                <div class="input-group">
-                                    Dealership Review
-                                    <input type="text" class="form-control" placeholder="Username" name="username" >
-                                    <input type="password" class="form-control" placeholder="Password" name="psw" >
-                                    <button class="btn btn-primary" type="submit">Login</button>
-                                    <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                                </div>
-                            </form>
-                        </li>
-                        {% endif %}
-                    </ul>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                </li>
             </ul>
-            
-        </nav>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+            <li>
+                <a class="btn btn-link" href="#">({{ user.username }})</a>
+                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li>
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Username" name="username" >
+                        <input type="password" class="form-control" placeholder="Password" name="psw" >
+                        <button class="btn btn-primary" type="submit">Login</button>
+                        <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                    </div>
+                </form>
+            </li>
+            {% endif %}
+        </ul>
+    </nav>
+
+    <!-- dealer details -->
+    {% if reviews == 'No reviews for this dealer, or dealer not found' %}
+        <h2> No reviews for this dealer, or dealer not found! </h2>
+    {% else %}
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Dealership</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Car Make</th>
+                    <th scope="col">Car Model</th>
+                    <th scope="col">Car Year</th>
+                    <th scope="col">Purchase</th>
+                    <th scope="col">Purchase Date</th>
+                    <th scope="col">Review</th>                  
+                    <th scope="col">Sentiment</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for review in reviews %}
+                    <tr>
+                        <td>{{review.id}}</td>
+                        <td>{{review.dealership}}</td>
+                        <td>{{review.name}}</td>
+                        <td>{{review.car_make}}</td>
+                        <td>{{review.car_model}}</td>
+                        <td>{{review.car_year}}</td>
+                        <td>{{review.purchase}}</td>
+                        <td>{{review.purchase_date}}</td>
+                        <td>{{review.review}}</td>                  
+                        <td>{{review.sentiment}}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+      
+    {% endif %}
 
     <!-- Add reviews as cards -->
- <div class="container-fluid">
+
+    </body>
+
+</html>
+
+
+    <!-- Add reviews as cards -->
+ <!-- <div class="container-fluid">
     {% if messages %}
         {% for message in messages %}
             <div class="alert alert-warning" role="alert">{{ message }}</div>
@@ -99,5 +135,5 @@
     </div>
 </div>
 
-</body>
+</body> -->
 
