--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -9,131 +9,125 @@
 
     <body>
 
-    <!--Add a nav bar here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Capston Project</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                <a class="nav-link" href="{% url 'djangoapp:index' %}">Home<span class="sr-only">(current)</span></a>
+        <!--Add a nav bar here -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Capston Project</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'djangoapp:index' %}">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" href="{% url 'djangoapp:add_review' id %}">Add review</a>
+                    <a class="btn btn-link" href="#">({{ user.username }})</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
                 </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
                 </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                </li>
+                {% endif %}
             </ul>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-            {% if user.is_authenticated %}
-            <li>
-                <a class="btn btn-link" href="#">({{ user.username }})</a>
-                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-            </li>
-            {% else %}
-            <li>
-                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Username" name="username" >
-                        <input type="password" class="form-control" placeholder="Password" name="psw" >
-                        <button class="btn btn-primary" type="submit">Login</button>
-                        <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                    </div>
-                </form>
-            </li>
-            {% endif %}
-        </ul>
-    </nav>
+        </nav>
 
-    <!-- dealer details -->
-    {% if reviews == 'No reviews for this dealer, or dealer not found' %}
-        <h2> No reviews for this dealer, or dealer not found! </h2>
-    {% else %}
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Dealership</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Car Make</th>
-                    <th scope="col">Car Model</th>
-                    <th scope="col">Car Year</th>
-                    <th scope="col">Purchase</th>
-                    <th scope="col">Purchase Date</th>
-                    <th scope="col">Review</th>                  
-                    <th scope="col">Sentiment</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for review in reviews %}
+        <!-- dealer details -->
+        {% if reviews == 'No reviews for this dealer, or dealer not found' %}
+            <h2> No reviews for Dealer Id {{id}}! </h2>
+        {% else %}
+            <!-- <table class="table table-striped">
+                <thead class="thead-dark">
                     <tr>
-                        <td>{{review.id}}</td>
-                        <td>{{review.dealership}}</td>
-                        <td>{{review.name}}</td>
-                        <td>{{review.car_make}}</td>
-                        <td>{{review.car_model}}</td>
-                        <td>{{review.car_year}}</td>
-                        <td>{{review.purchase}}</td>
-                        <td>{{review.purchase_date}}</td>
-                        <td>{{review.review}}</td>                  
-                        <td>{{review.sentiment}}</td>
+                        <th scope="col">Id</th>
+                        <th scope="col">Dealership</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Car Make</th>
+                        <th scope="col">Car Model</th>
+                        <th scope="col">Car Year</th>
+                        <th scope="col">Purchase</th>
+                        <th scope="col">Purchase Date</th>
+                        <th scope="col">Review</th>                  
+                        <th scope="col">Sentiment</th>
                     </tr>
+                </thead>
+                <tbody>
+                    {% for review in reviews %}
+                        <tr>
+                            <td>{{review.id}}</td>
+                            <td>{{review.dealership}}</td>
+                            <td>{{review.name}}</td>
+                            <td>{{review.car_make}}</td>
+                            <td>{{review.car_model}}</td>
+                            <td>{{review.car_year}}</td>
+                            <td>{{review.purchase}}</td>
+                            <td>{{review.purchase_date}}</td>
+                            <td>{{review.review}}</td>                  
+                            <td><img></img>{{review.sentiment}}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table> -->
+
+            <!-- Add reviews as cards -->
+        <div class="container-fluid">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-warning" role="alert">{{ message }}</div>
                 {% endfor %}
-            </tbody>
-        </table>
-      
-    {% endif %}
+            {% endif %}
 
-    <!-- Add reviews as cards -->
+            <h3>Reviews for Dealer_id <b>{{id}}</b></h3>
 
-    </body>
-
-</html>
-
-
-    <!-- Add reviews as cards -->
- <!-- <div class="container-fluid">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-warning" role="alert">{{ message }}</div>
-        {% endfor %}
-    {% endif %}
-
-    <h3>Reviews for Dealer_id <b>{{dealer.id}}</b></h3>
-
-    <div class="container">
-        <div class="card-columns">
-            {% for review in reviews %}
-            <div class="col-auto mb-3">
-                <div class="card">
-                    {% if review.sentiment == "positive" %}
-                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" width="36px" height="36px"
-                             alt="Sentiment">
-                    {% elif review.sentiment == "negative" %}
-                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" width="36px" height="36px"
-                                   alt="Sentiment">
-                        {% else %}
-                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" width="36px" height="36px"
-                                   alt="Sentiment">
-                    {% endif %}
-                    <div class="card-body bg-light">
-                              {% if review.car_make%}
-                                  <h5 class="card-title">{{review.car_make}}, {{review.car_model}} </h5>
-                                  <h5 class="card-title">{{review.car_year}}</h5>
-                               {% endif %}
-                              <p class="card-text">{{review.review}}</p>
+            <div class="container">
+                <div class="card-columns">
+                    {% for review in reviews %}
+                    <div class="col-auto mb-3">
+                        <div class="card">
+                            {% if review.sentiment == "positive" %}
+                                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" width="36px" height="36px"
+                                    alt="Sentiment">
+                            {% elif review.sentiment == "negative" %}
+                                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" width="36px" height="36px"
+                                        alt="Sentiment">
+                                {% else %}
+                                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" width="36px" height="36px"
+                                        alt="Sentiment">
+                            {% endif %}
+                            <div class="card-body bg-light">
+                                    {% if review.car_make%}
+                                        <h5 class="card-title">{{review.car_make}}, {{review.car_model}} </h5>
+                                        <h5 class="card-title">{{review.car_year}}</h5>
+                                    {% endif %}
+                                    <p class="card-text">{{review.review}}</p>
+                            </div>
+                        </div>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
-            {% endfor %}
         </div>
-    </div>
-</div>
+        
+        {% endif %}
 
-</body> -->
-
+    </body>
+</html>
