--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -56,15 +56,36 @@
         </ul>
     </nav>
     
-    <h2> All Dealerships </h2>
-
-    <table class="table table-striped">
-        {% for dealer in dealership_list %}
-        <tr>
-            <td> {{dealer.short_name}} </td>
-        </tr>
-        {% endfor %}
+    <table class="table table-striped" id="table" data-filter-control="true">
+        <thead class="thead-dark">
+            <tr>
+                <th data-field='id'>ID</th>
+                <th data-field='dealer_name'>Dealer Name</th>
+                <th data-field='city'>City</th>
+                <th data-field='address'>Address</th>
+                <th data-field='zip'>Zip</th>
+                <th data-field='state' data-filter-control="select">State</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for dealer in dealership_list %}
+            <tr>
+                <td> {{dealer.id}} </td>
+                <td> <a href="{% url 'djangoapp:dealer_details' dealer.id %}">{{dealer.short_name}}</a></td>
+                <td> {{dealer.city}} </td>
+                <td> {{dealer.address}} </td>
+                <td> {{dealer.city}} </td>
+                <td> {{dealer.state}} </td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
     </body>
+
+    <script>
+        $(function() {
+          $('#table').bootstrapTable()
+        })
+      </script>
 
 </html>
